{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 286,
  "lineage": "abe26288-bc69-8287-5320-71adc03055f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fitlio_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dfe99e1a254d0f8",
            "arn": "arn:aws:ec2:ap-southeast-2:238391222114:instance/i-0cc4a105dfe42063f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc4a105dfe42063f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fitlio-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c49a0f817d8686c",
            "private_dns": "ip-10-0-1-164.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-3-107-8-130.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.107.8.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077ad5c5cdc69d5db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b04fb647f7fb00dc",
            "tags": {
              "Environment": "production",
              "Name": "fitlio-server",
              "Project": "fitlio"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "fitlio-server",
              "Project": "fitlio"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0314297b98af56e82"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.fitlio_key",
            "aws_security_group.fitlio_sg",
            "aws_security_group.lambda_sg",
            "aws_subnet.public",
            "aws_vpc.fitlio_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fitlio_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:238391222114:internet-gateway/igw-0ec731ac6703a94fa",
            "id": "igw-0ec731ac6703a94fa",
            "owner_id": "238391222114",
            "tags": {
              "Name": "fitlio-igw",
              "Project": "fitlio"
            },
            "tags_all": {
              "Name": "fitlio-igw",
              "Project": "fitlio"
            },
            "vpc_id": "vpc-0b34c4d43cde61837"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fitlio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:238391222114:route-table/rtb-0e4271dbfbac4a44d",
            "id": "rtb-0e4271dbfbac4a44d",
            "owner_id": "238391222114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec731ac6703a94fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fitlio-public-rt",
              "Project": "fitlio"
            },
            "tags_all": {
              "Name": "fitlio-public-rt",
              "Project": "fitlio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b34c4d43cde61837"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.fitlio_igw",
            "aws_vpc.fitlio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03abb607e28feb8ed",
            "route_table_id": "rtb-0e4271dbfbac4a44d",
            "subnet_id": "subnet-0b04fb647f7fb00dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.fitlio_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.fitlio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fitlio_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:238391222114:security-group/sg-0314297b98af56e82",
            "description": "Security group for Fitlio EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0314297b98af56e82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Fitlio API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL - Lambda only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5d097a20ecf70a0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "fitlio-sg",
            "name_prefix": "",
            "owner_id": "238391222114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fitlio-sg",
              "Project": "fitlio"
            },
            "tags_all": {
              "Name": "fitlio-sg",
              "Project": "fitlio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b34c4d43cde61837"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.fitlio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:238391222114:security-group/sg-0d5d097a20ecf70a0",
            "description": "Security group for Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5d097a20ecf70a0",
            "ingress": [],
            "name": "fitlio-lambda-sg",
            "name_prefix": "",
            "owner_id": "238391222114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b34c4d43cde61837"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fitlio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:238391222114:subnet/subnet-0b04fb647f7fb00dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b04fb647f7fb00dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238391222114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fitlio-public-subnet",
              "Project": "fitlio"
            },
            "tags_all": {
              "Name": "fitlio-public-subnet",
              "Project": "fitlio"
            },
            "vpc_id": "vpc-0b34c4d43cde61837"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fitlio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fitlio_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:238391222114:vpc/vpc-0b34c4d43cde61837",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef37d5ec84d4f078",
            "default_route_table_id": "rtb-01f66602ef5ca99ab",
            "default_security_group_id": "sg-0ac048a582646c7a0",
            "dhcp_options_id": "dopt-021253daaa37ba673",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b34c4d43cde61837",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f66602ef5ca99ab",
            "owner_id": "238391222114",
            "tags": {
              "Environment": "production",
              "Name": "fitlio-vpc",
              "Project": "fitlio"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "fitlio-vpc",
              "Project": "fitlio"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}